--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "click-captcha",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.1",
   "author": "fffmoon",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
