feat(doc): 文档补充
-- 1. 新增，修改了图片地址、补充了说明文档3

--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "license": "MIT",
   "keywords": [
     "captcha",
+    "验证码",
+    "中文验证码",
+    "汉字验证码",
+    "中文汉字字序点击验证码",
     "click-captcha",
     "chinese-captcha",
     "verification-system"
